--- a/FitnessClub.csproj
+++ b/FitnessClub.csproj
@@ -125,6 +125,12 @@
     <Compile Include="Forms\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Reg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Reg.Designer.cs">
+      <DependentUpon>Reg.cs</DependentUpon>
+    </Compile>
     <Compile Include="Pages\Index.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -180,6 +186,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Reg.resx">
+      <DependentUpon>Reg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pages\Index.resx">
       <DependentUpon>Index.cs</DependentUpon>
